# kind-nes

./: Cargo.toml  README.md
.github/workflows/: rust.yml
apu/: Cargo.toml
apu/src/: channels.rs  filters.rs  lib.rs
apu/src/channels/: dmc_channel.rs  envelope.rs  length_counter.rs  mod.rs  noise_channel.rs  pulse_channel.rs  triangle_channel.rs
cpu/: Cargo.toml
cpu/src/: addressing_mode.rs  instruction.rs  lib.rs  status_register.rs
gtk-ui/: Cargo.toml
gtk-ui/src/: main.rs
imgui-ui/: Cargo.toml
imgui-ui/src/: main.rs
memory/: Cargo.toml
memory/src/: lib.rs  mmu.rs  ram.rs  rom.rs  simple_ram.rs
nes/: Cargo.toml
nes/src/: cpu_mapped_registers.rs  lib.rs  main.rs  nametable_memory.rs  palette_ram.rs
nes/src/cartridge/: cartridge_metadata.rs  mod.rs
nes/src/cartridge/mapper/: mapper0.rs  mapper1.rs  mapper2.rs  mapper3.rs  mapper4.rs  mapper7.rs  mapper71.rs  mapper9.rs  mod.rs
nes/src/controllers/: mod.rs  no_controller.rs  standard_controller.rs
nes/tests/: nestest.rs
ppu/: Cargo.toml
ppu/src/: background_data.rs  lib.rs  registers.rs  scan.rs  sprite_data.rs
sdl-frontend/: Cargo.toml
sdl-frontend/src/: lib.rs
sdl-ui/: Cargo.toml
sdl-ui/src/: lib.rs  main.rs
windows-ui/: Cargo.toml
windows-ui/src/: main.rs
