[workspace]
members = [
    "nes",
    "cpu",
    "ppu",
    "apu",
    "memory",
    "sdl-frontend",
    "windows-ui",
    "gtk-ui",
]

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false