[package]
name = "gtk-ui"
version = "0.1.0"
authors = ["Henry Sloan <henryksloan@gmail.com>"]
edition = "2018"

[dependencies]
nes = { path = "../nes" }
sdl-frontend = { path = "../sdl-frontend" }
glib = "0.10.3"
sdl2 = "0.34.3"
sdl2-sys = "0.34.3"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
