[package]
name = "windows-ui"
version = "0.1.0"
authors = ["Henry Sloan <henryksloan@gmail.com>"]
edition = "2018"

[dependencies]
nes = { path = "../nes" }
cpu = { path = "../cpu" }
memory = { path = "../memory" }
sdl-ui = { path = "../sdl-ui" }
sdl2 = "0.34.3"
sdl2-sys = "0.34.3"
rand = "0.8.3"
native-windows-gui = "1.0.10"
native-windows-derive = "1.0.3"